--- a/Memoria/capitulos/04_Planificacion.tex
+++ b/Memoria/capitulos/04_Planificacion.tex
@@ -110,8 +110,8 @@ A continuación, se listarán todas las historias de usuario ordenadas por prior
     \item \textbf{HU3 - } Como usuario quiero ver los datos personales y los logros de mi perfil. (Prioridad: Media | Puntos de Historia: 1)
     \item \textbf{HU4 - } Como usuario quiero editar los datos de mi perfil. (Prioridad: Media | Puntos de Historia: 2)
     \item \textbf{HU23 - } Como administrador quiero crear un usuario. (Prioridad: Baja | Puntos de Historia: 1)
-    \item \textbf{HU12 - } Como usuario quiero ver el ranking de usuarios. (Prioridad: Baja | Puntos de Historia: 1)
-    \item \textbf{HU5 - } Como usuario quiero ver el perfil de otros usuarios.  (Prioridad: Baja | Puntos de Historia: 1)
+    \item \textbf{HU12 - } Como usuario quiero ver la lista de mis logros. (Prioridad: Baja | Puntos de Historia: 1)
+    \item \textbf{HU5 - } Como usuario quiero ver con detalle uno de mis logros.  (Prioridad: Baja | Puntos de Historia: 1)
 
 \end{itemize}
 
@@ -257,9 +257,10 @@ dos historias relacionadas con el perfil propio del usuario.
 El objetivo de este Sprint es acabar todas las historias de usuario que quedan del product backlog y cuya prioridad es baja como lo es la interacción entre los distintos usuarios de la aplicación. Además, se añadirá una funcionalidad de valor añadido
 en función del tiempo disponible y de las funcionalidades que se hayan podido implementar en los Sprints anteriores.
 \begin{itemize}
-    \item HU5 - Como usuario quiero ver el perfil de otros usuarios.
-    \item HU12 - Como usuario quiero ver el ranking de usuarios.
-    \item Añadir funcionalidad de valor añadido (a definir)
+    \item HU5 - Como usuario quiero ver la lista de mis logros.
+    \item HU12 - Como usuario quiero ver con detalle uno de mis logros.
+    \item Realizar mejoras de código y arreglar errores.
+    \item Mejorar el diseño de la aplicación.
 \end{itemize}
 
 \subsection{Sprint \#12 - Mejoras de código}
@@ -269,7 +270,7 @@ En este Sprint se pretende realizar mejoras de código en cuanto a estilo, forma
 del séptimo capítulo del documento.
 \begin{itemize}
     \item Revisar Capítulo 7 - Implementación
-    \item Realizar mejoras de código.
+    \item Realizar mejoras de código y arreglar errores.
 \end{itemize}
 
 \subsection{Sprint \#13 - Pruebas }
