Memoria arreglada, cambios mejorados y pruebas empezadas

--- a/Memoria/capitulos/08_Pruebas.tex
+++ b/Memoria/capitulos/08_Pruebas.tex
@@ -1,1 +1,8 @@
 \chapter{Pruebas}
+\label{cap:pruebas}
+En este capítulo se describen las pruebas realizadas al sistema, tanto de forma individual como de forma integrada. Se describen los casos de prueba, los resultados obtenidos y las conclusiones extraídas de los mismos.
+El objetivo de las pruebas es comprobar que el sistema cumple con los requisitos establecidos en el capítulo \ref{cap:requisitos} y que funcione correctamente.
+
+\section{Pruebas de integración}
+\label{sec:pruebas-integracion}
+
