--- a/Memoria/capitulos/08_Pruebas.tex
+++ b/Memoria/capitulos/08_Pruebas.tex
@@ -1,8 +1,34 @@
 \chapter{Pruebas}
 \label{cap:pruebas}
 En este capítulo se describen las pruebas realizadas al sistema, tanto de forma individual como de forma integrada. Se describen los casos de prueba, los resultados obtenidos y las conclusiones extraídas de los mismos.
-El objetivo de las pruebas es comprobar que el sistema cumple con los requisitos establecidos en el capítulo \ref{cap:requisitos} y que funcione correctamente.
+El objetivo de las pruebas es comprobar que el sistema cumple con los requisitos establecidos en el capítulo \ref{cap:especificacion-requisitos} y que funcione correctamente.
 
-\section{Pruebas de integración}
-\label{sec:pruebas-integracion}
+\section{Paquetes utilizados}
+\label{sec:paquetes-utilizados}
+Para realizar las pruebas se han utilizado los siguientes paquetes:
 
+\begin{itemize}
+    \item \textbf{flutter\_test}: paquete que contiene las clases necesarias para realizar las pruebas de unidad.
+    \item \textbf{flutter\_driver}: paquete que contiene las clases necesarias para realizar las pruebas de integración.
+\end{itemize}
+
+\section{Pruebas de unidad}
+\label{sec:pruebas-unidad}
+Las pruebas de unidad son aquellas que se realizan sobre los componentes más pequeños del sistema, como pueden ser las funciones o los métodos. Estas pruebas se realizan de forma individual, aislando el componente a probar de los demás componentes del sistema. 
+De esta forma nos aseguramos de que el componente funciona correctamente y que no depende de otros componentes para su correcto funcionamiento.
+
+\subsection{Lecciones}
+\label{subsec:pruebas-unidad-lecciones}
+
+
+
+
+\section*{Pruebas de controlador o widget}
+\label{sec:pruebas-controlador}
+Las pruebas de controlador o widget son aquellas que se realizan sobre los controladores o widgets de la aplicación. Estas pruebas se realizan de forma individual, aislando el controlador o widget a probar de los demás componentes del sistema.
+
+
+\section*{Pruebas de sistema o de integración}
+\label{sec:pruebas-sistema}
+Las pruebas de sistema o de integración son aquellas que se realizan sobre el sistema completo. Estas pruebas se realizan de forma conjunta, comprobando que todos los componentes del sistema funcionan correctamente y que se comunican entre ellos de forma correcta.
+De esta forma nos aseguramos de que el sistema funciona de forma adecuada simulando varias acciones que podría realizar un usuario.
